--- a/layouts/partials/post-tags.html
+++ b/layouts/partials/post-tags.html
@@ -1,8 +1,8 @@
 {{ if .Params.tags }}
-<div class="blog-post-tags text-secondary">
-    <strong>{{ i18n "tags" }}:</strong>
+<div class="post-tags text-secondary pb-4">
+    <strong>{{ "tags" }}:</strong>
     {{ range .Params.tags }}
-        <a class="badge badge-primary" href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+        <a class="badge badge-success" href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
     {{ end }}
 </div>
 {{ end }}
