--- a/layouts/partials/post-title.html
+++ b/layouts/partials/post-title.html
@@ -1,3 +1,3 @@
-<h2 class="blog-post-title">
-    <a class="text-dark" href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
-</h2>
+<div class="post-title text-center">
+    <h1>{{ .Title | markdownify }}</h1>
+</div>
