Add center-block CSS style element

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,11 @@ body {
 a {
   text-decoration: none !important;
 }
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 /*
  ******** Header custom style *********
  */
