Add Support for Disqus Comments

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,6 +25,7 @@
                 {{ partial "post-fimage" . }}
                 {{ partial "post-content" . }}
                 {{ partial "post-tags" . }}
+                {{ template "_internal/disqus.html" . }}
             </article>
             <!-- TODO: Post Navigation -->
             <!-- TODO: Related Posts -->  
