--- a/static/css/syntax.css
+++ b/static/css/syntax.css
@@ -1,4 +1,4 @@
-/* Background */ .chroma { background-color: #F8F8F8; padding-top: 0.5rem; padding-bottom: 0.5rem }
+/* Background */ .chroma { background-color: #F8F8F8; padding: 0.5rem }
 /* Error */ .chroma .err { color: #ff0000; background-color: #ffaaaa }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
 /* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; width: auto; overflow: auto; display: block; }
