--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,7 +17,10 @@
     <link href="{{ .Site.BaseURL }}css/syntax.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}css/return-to-top.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700" type="text/css" media="all">
-
+    
+    <!-- Allow to inject custom head links-->
+    {{ partial "head-custom" . }}
+    
     {{ template "_internal/google_analytics_async.html" . }}
   </head>
   <body class="d-flex flex-column h-100">
