Support for About Us

--- a/layouts/_default/card.html
+++ b/layouts/_default/card.html
@@ -1,5 +1,5 @@
 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 pt-4 pb-4">
-    <div class="card card-block h-100">
+    <div class="drogon-card card card-block h-100">
         {{ with .Params.featured_image }}
             <img src="{{ . }}" class="card-img-top img-fluid" alt="..." />
         {{ end }}
