--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -24,8 +24,8 @@
                 <img src="{{ .image | absURL }}" class="card-img-top center-block" width="80%"/>
                 <div class="card-body pb-2">
                     <h4 class="card-title mb-1">{{.title }}</h4>
-                    <p class="mb-1">{{.designation }}</p>
-                    <p class="mb-1">{{ .company }}</p>
+                    <p class="mb-1 text-secondary">{{.designation }}</p>
+                    <p class="mb-1 text-secondary">{{ .company }}</p>
                 </div>
                 <div class="card-footer">
                     <ul>
@@ -39,6 +39,17 @@
             </div>
         </div>
         {{ end }}
+        <div class="col-md-12 powered-by text-center mb-4 pb-4 pt-4">
+            <h1 class="pb-4">Powered By</h1>
+            <ul>
+                <li><a href="https://gohugo.io/"><img src="/images/hugo-icon.png" alt="" width="100" height="100"/></a></li>
+                <li><a href="https://www.netlify.com/"><img src="/images/netlify-icon.png" alt="" width="100" height="100"/></a></li>
+                <li><a href="https://github.com/"><img src="/images/github-icon.png" alt="" width="100" height="100"/></a></li>
+            </ul>
+        </div>
+        <div class="col-md-12 align-center">
+            {{ template "_internal/disqus.html" . }}
+        </div>
     </div>
 </div>
 
