--- a/static/css/style.css
+++ b/static/css/style.css
@@ -335,3 +335,20 @@ footer .social-media-menu .fab:hover {
   display: inline;
   padding: 0;
 }
+
+.powered-by ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.powered-by ul li {
+  display: inline;
+}
+
+.powered-by ul li a {
+  margin-left: 10px;
+  margin-right: 10px;
+  display: inline;
+  padding: 0;
+}
