--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,6 +24,8 @@
     
     <!-- Allow to inject custom head links-->
     {{ partial "head-custom" . }}
+
+    {{ template "_internal/google_analytics.html" . }}
   </head>
   <body class="d-flex flex-column h-100">
     {{ block "header" . }}
