--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,6 +243,12 @@ footer .social-media-menu .fab:hover {
   font-weight: 500;
 }
 
+.post-content h2 {
+    border-bottom: 1px solid rgb(214, 219, 219);
+    margin: 30px 0 16px 0;
+    padding-bottom: 8px;
+}
+
 /********** End of Post Style **************************/
 
 /********** Widget Styles *****************************/
