--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -16,31 +16,33 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="text-center">Our Authors</h1>
+            <h2 class="text-center">about me ...</h2>
         </div>
-        {{ range .Site.Data.author.member }}
-        <div class="col-md-6">
-            <div class="author-card card text-center pt-4">
-                <img src="{{ .image | absURL }}" class="card-img-top center-block" width="80%"/>
-                <div class="card-body pb-2">
-                    <h4 class="card-title mb-1">{{.title }}</h4>
-                    <p class="mb-1 text-secondary">{{.designation }}</p>
-                    <p class="mb-1 text-secondary">{{ .company }}</p>
-                </div>
-                <div class="card-footer">
-                    <ul>
-                        {{ range .social }}
-                            <li>
-                                <a target="_blank" href="{{ .url }}"><i class="fab {{ .name }} fa-2x"></i></a>
-                            </li>
-                        {{ end }}
-                    </ul>   
+        <div class="col-md-12 text-center">
+            {{ range .Site.Data.author.member }}
+            <div class="text-center">
+                <div class="author-card card text-center pt-4">
+                    <img src="{{ .image | absURL }}" class="card-img-top center-block" width="80%"/>
+                    <div class="card-body pb-2">
+                        <h4 class="card-title mb-1">{{.title }}</h4>
+                        <p class="mb-1 text-secondary">{{.designation }}</p>
+                        <p class="mb-1 text-secondary">{{ .company }}</p>
+                    </div>
+                    <div class="card-footer">
+                        <ul>
+                            {{ range .social }}
+                                <li>
+                                    <a target="_blank" href="{{ .url }}"><i class="fab {{ .name }} fa-2x"></i></a>
+                                </li>
+                            {{ end }}
+                        </ul>
+                    </div>
                 </div>
             </div>
+            {{ end }}
         </div>
-        {{ end }}
         <div class="col-md-12 powered-by text-center mb-4 pb-4 pt-4">
-            <h1 class="pb-4">Powered By</h1>
+            <h2 class="pb-4">Powered By</h2>
             <ul>
                 <li><a href="https://gohugo.io/"><img src="/images/hugo-icon.png" alt="" width="100" height="100"/></a></li>
                 <li><a href="https://www.netlify.com/"><img src="/images/netlify-icon.png" alt="" width="100" height="100"/></a></li>
